--- a/bwapp/client/views/genjobs.ng.jade
+++ b/bwapp/client/views/genjobs.ng.jade
@@ -4,34 +4,74 @@
   =========================================================*/
 toaster-container(toaster-options="{'position-class': 'toast-bottom-right', 'close-button':true}")
 .row-fluid
-  h2 State and Action Tasks
-  h3 Create
-  form.form-inline.ng-pristine.ng-valid(name='myform', ng-submit='taskGen(tasktype, cstate, bundle, asncnt, antcnt)')
-    .form-group(style='margin-right: 10px')
-      label Task Type:
-      select.form-control(ng-model='tasktype', ng-init='tasktype="action"')
-        each v in ['state', 'action']
-          option(value='#{v}', ng-selected='tasktype=="#{v}"') #{v}
-    .form-group(style='margin-right: 10px')
-      label State: 
-      select.form-control(ng-model='cstate', ng-init='cstate=0')
-        option(ng-repeat='state in statenum', value='{{state}}', ng-selected='cstate==(state)') {{state}}
-    .form-group(style='margin-right: 10px', title='Number of jobs to bundle per task')
-      label Bundle By:
-      select.form-control(ng-model='bundle', ng-init='bundle=(tasktype=="action")?10:5')
-        each v in [1, 2, 3, 4, 5, 6, 7, 8, 9, 10]
-          option(value='#{v}', ng-selected='bundle==#{v}') #{v}
-    .form-group(style='margin-right: 10px', title='# of Turks to use per bundle of work')
-      label # Turk Assignments:
-      select.form-control(ng-model='asncnt', ng-init='asncnt=3')
-        each v in [1, 2, 3, 4, 5, 6, 7, 8, 9]
-          option(value='#{v}', ng-selected='asncnt==#{v}') #{v}
-    .form-group(style='margin-right: 10px', title='# of annotations per assignment')
-      label # of Annotations:
-      select.form-control(ng-model='antcnt', ng-init='antcnt=3')
-        each v in [1, 2, 3]
-          option(value='#{v}', ng-selected='antcnt==#{v}') #{v}
-    button.btn.btn-default(type='submit') Go
+  h2 Action and Description Tasks
+  .row
+    accordion.col-sm-6
+      accordion-group.panel-primary.shadowbox(ng-init="isOpen = true", is-open="isOpen")
+        accordion-heading
+          h4.panel-title
+            i.fa.fa-cubes
+            | &nbsp; Available Block States
+        table.table.table-condensed.table-striped(ng-table='tableStateParams', show-filter='true')
+          tr(ng-repeat='s in $data')
+            td(title="''")
+              button.btn.btn-xs.btn-danger(ng-click='remState(s._id)')
+                .fa.fa-remove
+            td(title="'ID'", filter="{ _id: 'text'}", sortable="'_id'", ng-click='chooseState(s._id)')
+              | {{s._id}}
+            td(title="'Name'", filter="{ name: 'text'}", sortable="'name'", ng-click='chooseState(s._id)')
+              | {{s.name}}
+            td(title="'Created'", sortable="'created'", ng-click='chooseState(s._id)')
+              | {{s.created | date:"MM/dd/yyyy"}}
+    accordion.col-sm-6(ng-show='curState._id')
+      accordion-group.panel-primary.shadowbox(ng-init="isOpen = true", is-open="isOpen")
+        accordion-heading
+          h4.panel-title
+            i.fa.fa-edit
+            | &nbsp; Create Job
+        .row-fluid.col-sm-8(style='padding-left: 0px')
+          #imgpreview
+        .row-fluid.col-sm-4
+          b ID: {{curState._id}}
+          br
+          i Name: {{curState.name}}
+          br
+          | # Blocks: {{curState.block_meta.blocks.length}}
+          br
+          | # Moves: {{curState.block_states.length}}
+          br
+          | Created: {{curState.created | date:"MM/dd/yyyy"}}
+        .row-fluid.col-sm-12
+          form.form-inline.ng-pristine.ng-valid(name='createJobForm', ng-submit='taskGen(tasktype, movedir, bundle, asncnt, antcnt)')
+            .form-group(style='margin-right: 10px')
+              label Task Type:
+              select.form-control(ng-model='tasktype', ng-init='tasktype="action"')
+                each v in ['state', 'action']
+                  option(value='#{v}', ng-selected='tasktype=="#{v}"') #{v}
+            .form-group(style='margin-right: 10px')
+              label Movement Direction:
+              select.form-control(ng-model='movedir', ng-init='movedir="normal"')
+                each v in ['normal', 'reverse']
+                  option(value='#{v}', ng-selected='movedir=="#{v}"') #{v}
+            br
+            .form-group(style='margin-right: 10px', title='Number of jobs to bundle per task')
+              label Bundle By:
+              select.form-control(ng-model='bundle', ng-init='bundle=(tasktype=="action")?10:5')
+                each v in [1, 2, 3, 4, 5, 6, 7, 8, 9, 10]
+                  option(value='#{v}', ng-selected='bundle==#{v}') #{v}
+            .form-group(style='margin-right: 10px', title='# of Turks to use per bundle of work')
+              label # Turk Assignments:
+              select.form-control(ng-model='asncnt', ng-init='asncnt=3')
+                each v in [1, 2, 3, 4, 5, 6, 7, 8, 9]
+                  option(value='#{v}', ng-selected='asncnt==#{v}') #{v}
+            .form-group(style='margin-right: 10px', title='# of annotations per assignment')
+              label # of Annotations:
+              select.form-control(ng-model='antcnt', ng-init='antcnt=3')
+                each v in [1, 2, 3]
+                  option(value='#{v}', ng-selected='antcnt==#{v}') #{v}
+            br
+            button.btn.btn-default(type='submit') Create
+
   hr
 .row
   accordion.col-sm-12
@@ -74,3 +114,29 @@ toaster-container(toaster-options="{'position-class': 'toast-bottom-right', 'clo
         tbody
           tr(ng-repeat='tid in jobinfo.list', ng-click="$state.go('app.gentask',{taskid: tid})")
             td {{tid}}
+
+script#didCreateJob(type="text/ng-template")
+  form.form-inline.ng-pristine.ng-valid(name='createJobForm', ng-submit='taskGen(tasktype, bundle, asncnt, antcnt)')
+    .form-group(style='margin-right: 10px')
+      label Task Type:
+      select.form-control(ng-model='tasktype', ng-init='tasktype="action"')
+        each v in ['state', 'action']
+          option(value='#{v}', ng-selected='tasktype=="#{v}"') #{v}
+    .form-group(style='margin-right: 10px', title='Number of jobs to bundle per task')
+      label Bundle By:
+      select.form-control(ng-model='bundle', ng-init='bundle=(tasktype=="action")?10:5')
+        each v in [1, 2, 3, 4, 5, 6, 7, 8, 9, 10]
+          option(value='#{v}', ng-selected='bundle==#{v}') #{v}
+    .form-group(style='margin-right: 10px', title='# of Turks to use per bundle of work')
+      label # Turk Assignments:
+      select.form-control(ng-model='asncnt', ng-init='asncnt=3')
+        each v in [1, 2, 3, 4, 5, 6, 7, 8, 9]
+          option(value='#{v}', ng-selected='asncnt==#{v}') #{v}
+    .form-group(style='margin-right: 10px', title='# of annotations per assignment')
+      label # of Annotations:
+      select.form-control(ng-model='antcnt', ng-init='antcnt=3')
+        each v in [1, 2, 3]
+          option(value='#{v}', ng-selected='antcnt==#{v}') #{v}
+    button.btn.btn-default(type='submit') Go
+
+
