update task view

--- a/bwapp/client/views/gentask.ng.jade
+++ b/bwapp/client/views/gentask.ng.jade
@@ -3,5 +3,37 @@
   * Created by wjwong on 10/5/15.
   =========================================================*/
 toaster-container(toaster-options="{'position-class': 'toast-bottom-right', 'close-button':true}")
-.row-fluid
-  h2 Task
+.container-fluid
+  .row-fluid
+    h2 Task
+  //-.row-fluid.well
+    h3 Example
+  .row-fluid.well.col-sm-12(ng-if='workerId && taskdata.tasktype == "action"')
+    .col-sm-12
+      .col-sm-1
+        h3 {{taskidx+1}}/{{taskdata.idxlist.length}}
+      .col-sm-5
+        #statea
+      .col-sm-1(style="margin-top: 1em; font-size: 60px;")
+        .fa.fa-chevron-right
+      .col-sm-5
+        #stateb
+    .col-sm-12
+      h4 What would you tell a friend of yours to do in a world that has the objects in the first image in order to obtain the configuration in the second image?  Use each text box to write at least three distinct alternatives.
+      hr
+    .col-sm-12
+      form.ng-pristine.ng-valid(name='annotForm', ng-submit='nextAnnot(notes)')
+        div(ng-repeat='note in notes track by $index')
+          //-.col-sm-1
+            //-button.btn.btn-xs.btn-danger(title='Remove Description')
+              .fa.fa-remove(ng-click='removeNote($index)')
+          .col-sm-12
+            b.pull-left(ng-show='!note.length || note.length < 10', style='font-size: 16px; color: red; width:2%; float: left')
+              .fa.fa-asterisk
+            b.pull-left(ng-show='note.length > 9', style='font-size: 16px; color: green; width:2%;').fa.fa-check
+            .form-group.has-feedback.pull-left(style='display:inline-block; width:80%;')
+              textarea.form-control(type='text', ng-model='notes[$index]', style='padding-left: 26px;', clear-icon)
+        button.btn.btn-primary(ng-show='notes[0].length > 9 && notes[1].length > 9 && notes[2].length > 9') Next
+  .row-fluid.well.col-sm-12(ng-if='!workerId')
+    .col-sm-12
+      h3(style='color: red') This Job is unavailable.
