--- a/bwapp/client/views/genjobs.ng.jade
+++ b/bwapp/client/views/genjobs.ng.jade
@@ -4,7 +4,7 @@
   =========================================================*/
 toaster-container(toaster-options="{'position-class': 'toast-bottom-right', 'close-button':true}")
 .row-fluid
-  h2 Action and Description Tasks
+  h2 Action and Description Jobs
   .row
     accordion.col-sm-6
       accordion-group.panel-primary.shadowbox(ng-init="isOpen = true", is-open="isOpen")
@@ -12,29 +12,38 @@ toaster-container(toaster-options="{'position-class': 'toast-bottom-right', 'clo
           h4.panel-title
             i.fa.fa-cubes
             | &nbsp; Available Block States
-        table.table.table-condensed.table-striped(ng-table='tableStateParams', show-filter='true')
-          tr(ng-repeat='s in $data')
-            td(title="''")
-              button.btn.btn-xs.btn-danger(ng-click='remState(s._id)')
-                .fa.fa-remove
-            td(title="'ID'", filter="{ _id: 'text'}", sortable="'_id'", ng-click='chooseState(s._id)')
-              | {{s._id}}
-            td(title="'Name'", filter="{ name: 'text'}", sortable="'name'", ng-click='chooseState(s._id)')
-              | {{s.name}}
-            td(title="'Created'", sortable="'created'", ng-click='chooseState(s._id)')
-              | {{s.created | date:"MM/dd/yyyy"}}
+        table.table.table-condensed#listgames(ng-if='dataloaded', datatable="ng", dt-options="dtOptionsAvail")
+          thead
+            tr
+              th 
+              th ID
+              th Name
+              th Created
+          tbody
+            tr(ng-repeat='s in stateslist')
+              td(title="''")
+                button.btn.btn-xs.btn-danger(ng-click='remState(s._id)')
+                  .fa.fa-remove
+              td(title="'ID'", filter="{ _id: 'text'}", sortable="'_id'", ng-click='chooseState(s._id)')
+                | {{s._id}}
+              td(title="'Name'", filter="{ name: 'text'}", sortable="'name'", ng-click='chooseState(s._id)')
+                | {{s.name}}
+              td(title="'Created'", sortable="'created'", ng-click='chooseState(s._id)')
+                | {{s.created | date:"MM/dd/yyyy"}}
     accordion.col-sm-6(ng-show='curState._id')
       accordion-group.panel-primary.shadowbox(ng-init="isOpen = true", is-open="isOpen")
         accordion-heading
           h4.panel-title
             i.fa.fa-edit
             | &nbsp; Create Job
-        .row-fluid.col-sm-8(style='padding-left: 0px')
+        .row-fluid.col-sm-8(style='padding-left: 0px;margin-left: -30px;')
           #imgpreview
-        .row-fluid.col-sm-4
-          b ID: {{curState._id}}
+        .row-fluid.col-sm-4(style='padding-left: 30px;')
+          | ID: 
+          b {{curState._id}}
           br
-          i Name: {{curState.name}}
+          | Name: 
+          b {{curState.name}}
           br
           | # Blocks: {{curState.block_meta.blocks.length}}
           br
@@ -70,8 +79,7 @@ toaster-container(toaster-options="{'position-class': 'toast-bottom-right', 'clo
                 each v in [1, 2, 3]
                   option(value='#{v}', ng-selected='antcnt==#{v}') #{v}
             br
-            button.btn.btn-default(type='submit') Create
-
+            button.btn.btn-primary(type='submit') Create
   hr
 .row
   accordion.col-sm-12
@@ -80,9 +88,10 @@ toaster-container(toaster-options="{'position-class': 'toast-bottom-right', 'clo
         h4.panel-title
           i.fa.fa-inbox
           | &nbsp; Job Groups
-      table.table.table-condensed#listgames(ng-if='dataloaded', datatable="ng", dt-options="dtOptions")
+      table.table.table-condensed#listgames(ng-if='dataloaded', datatable="ng", dt-options="dtOptionsGrp")
         thead
           tr
+            th 
             th Job Id
             th Type
             th State
@@ -91,10 +100,13 @@ toaster-container(toaster-options="{'position-class': 'toast-bottom-right', 'clo
             th # Annot
             th # Tasks
         tbody
-          tr(ng-repeat='job in jobmgrlist', ng-if='job.public', ng-click='selectJob(job._id)')
-            td(title='{{job._id}}') {{job._id}}
+          tr(ng-repeat='job in jobmgrlist', ng-if='job.public')
+            td
+              button.btn.btn-xs.btn-danger(ng-click='remJob(job._id)')
+                .fa.fa-remove
+            td(title='{{job._id}}', ng-click='selectJob(job._id)') {{job._id}}
             td(title='{{job.tasktype}}') {{job.tasktype}}
-            td(title='{{job.stateid}}') {{job.stateid}}
+            td(title='{{job.stateid}}', ng-click='chooseState(job.stateid)') {{job.stateid}}
             td(title='{{job.bundle}}') {{job.bundle}}
             td(title='{{job.asncnt}}') {{job.asncnt}}
             td(title='{{job.antcnt}}') {{job.antcnt}}
@@ -106,37 +118,17 @@ toaster-container(toaster-options="{'position-class': 'toast-bottom-right', 'clo
         h4.panel-title
           i.fa.fa-file-text-o
           | &nbsp; Job {{jobinfo._id}} Information
-      .mb Task Type: {{jobinfo.tasktype | uppercase}}  State: {{jobinfo.stateid}}  Bundle: {{jobinfo.bundle}}
-      table.table.table-condensed#listgames(ng-if='dataloaded', datatable="ng", dt-options="dtOptions")
+      .mb 
+        | Task Type:
+        i  {{jobinfo.tasktype | uppercase}} &nbsp;&nbsp; 
+        | State:
+        i  {{jobinfo.stateid}} &nbsp;&nbsp; 
+        | Bundle:
+        i  {{jobinfo.bundle}}
+      table.table.table-condensed#listgames(ng-if='dataloaded', datatable="ng", dt-options="dtOptionsTask")
         thead
           tr
             th Task Id
         tbody
-          tr(ng-repeat='tid in jobinfo.list', ng-click="$state.go('app.gentask',{taskid: tid})")
+          tr(ng-repeat='tid in jobinfo.list', ng-click="$state.go('app.gentask',{taskId: tid})")
             td {{tid}}
-
-script#didCreateJob(type="text/ng-template")
-  form.form-inline.ng-pristine.ng-valid(name='createJobForm', ng-submit='taskGen(tasktype, bundle, asncnt, antcnt)')
-    .form-group(style='margin-right: 10px')
-      label Task Type:
-      select.form-control(ng-model='tasktype', ng-init='tasktype="action"')
-        each v in ['state', 'action']
-          option(value='#{v}', ng-selected='tasktype=="#{v}"') #{v}
-    .form-group(style='margin-right: 10px', title='Number of jobs to bundle per task')
-      label Bundle By:
-      select.form-control(ng-model='bundle', ng-init='bundle=(tasktype=="action")?10:5')
-        each v in [1, 2, 3, 4, 5, 6, 7, 8, 9, 10]
-          option(value='#{v}', ng-selected='bundle==#{v}') #{v}
-    .form-group(style='margin-right: 10px', title='# of Turks to use per bundle of work')
-      label # Turk Assignments:
-      select.form-control(ng-model='asncnt', ng-init='asncnt=3')
-        each v in [1, 2, 3, 4, 5, 6, 7, 8, 9]
-          option(value='#{v}', ng-selected='asncnt==#{v}') #{v}
-    .form-group(style='margin-right: 10px', title='# of annotations per assignment')
-      label # of Annotations:
-      select.form-control(ng-model='antcnt', ng-init='antcnt=3')
-        each v in [1, 2, 3]
-          option(value='#{v}', ng-selected='antcnt==#{v}') #{v}
-    button.btn.btn-default(type='submit') Go
-
-
