--- a/bwapp/client/views/gentask.ng.jade
+++ b/bwapp/client/views/gentask.ng.jade
@@ -10,8 +10,14 @@ toaster-container(toaster-options="{'position-class': 'toast-bottom-right', 'clo
     accordion-group.panel-primary(is-open="isOpenDir")
       accordion-heading
         h4.panel-title Directions
-      h4 What would you tell a friend to do in a world with objects in the first image in order to obtain the configuration in the second image?  Use each text box to write a distinct full (single/multi) sentence alternative.  Here is an example:
-      h1 PLACEHOLDER IMAGE
+      h4 What would you tell a friend to do in a world with objects in the first image in order to obtain the configuration in the second image?  Use each text box to write a distinct full (single/multi) sentence alternative.
+      .well.col-sm-8.col-sm-offset-2
+        h3 Example:
+        img.center-block(src='img/example.png')
+        label.mb-sm(style='border: 1px solid #dde6e9; border-radius: 4px; padding: 6px 16px;') Take block 14 and place it next to block 17. The down right corner of block 14 should touch the upper left corner of block 17.
+        label.mb-sm(style='border: 1px solid #dde6e9; border-radius: 4px; padding: 6px 16px;') Slide block 14 straight down until its right corner touches the top left corner of block 17.
+        label.mb-sm(style='border: 1px solid #dde6e9; border-radius: 4px; padding: 6px 16px;') Take the block that is on top of block 5. Move it close to block 17. Place it at the same level with block and on the same vertical line as block 5.
+
   .row-fluid.well.col-sm-12(ng-if='workerId && taskdata.tasktype == "action"')
     .col-sm-12(ng-if='submitter')
       .label.label-warning Read Only
