--- a/bwapp/client/views/gentask.ng.jade
+++ b/bwapp/client/views/gentask.ng.jade
@@ -20,17 +20,15 @@ toaster-container(toaster-options="{'position-class': 'toast-bottom-right', 'clo
     .col-sm-12(ng-if='submitter')
       .label.label-warning Read Only
       i(ng-if='submitter.time', style='font-size: 1.1em') &nbsp;&nbsp;Job submitted on {{submitter.time | date:"MM/dd/yyyy H:m"}}
-    .col-sm-12
-      .col-sm-5
-        #statea
-      .col-sm-1(style="margin-top: 1em; font-size: 60px;")
-        .fa.fa-chevron-right
-      .col-sm-5
-        #stateb
+    .col-sm-5
+      #statea
+    .col-sm-1(style="margin-top: 2em; font-size: 48px;")
+      .fa.fa-chevron-right
+    .col-sm-5
+      #stateb
     .col-sm-12
       hr
-    .col-sm-1
-      h3 {{taskidx+1}}/{{taskdata.idxlist.length}}
+    h4.pull-left {{taskidx+1}}/{{taskdata.idxlist.length}}
     .col-sm-11
       form.ng-pristine.ng-valid(name='annotForm')
         div(ng-repeat='note in notes track by $index')
@@ -60,8 +58,7 @@ toaster-container(toaster-options="{'position-class': 'toast-bottom-right', 'clo
     button.btn.btn-primary(ng-click='dlNotes()') Get Notes JSON
   .col-sm-12(ng-repeat='notes in taskdata.notes[workerId] track by $index')
     .col-sm-12
-      .col-sm-1
-        h3 {{$index+1}}
+      h3.pull-left {{$index+1}}
       .col-sm-5
         div(id='statea{{$index}}')
       .col-sm-1(style="margin-top: 1em; font-size: 60px;")
