--- a/bwapp/client/views/gentask.ng.jade
+++ b/bwapp/client/views/gentask.ng.jade
@@ -32,7 +32,8 @@ toaster-container(toaster-options="{'position-class': 'toast-bottom-right', 'clo
     .col-sm-11
       pre {{turkSubmitTo}}
       form.ng-pristine.ng-valid(name='annotForm', action='{{turkSubmitTo}}', method='post')
-        input(type="hidden" name="assignmentId" value="{{assignmentId}}")
+        input(type="hidden", name="assignmentId", value="{{assignmentId}}")
+        input(type="hidden", name="foo", value="bar")
         div(ng-repeat='note in notes track by $index')
           //-.col-sm-1
             //-button.btn.btn-xs.btn-danger(title='Remove Description')
